--- a/src/main/java/net/gotzi/drawmachine/sim/monitor/SimulationSettingView.form
+++ b/src/main/java/net/gotzi/drawmachine/sim/monitor/SimulationSettingView.form
@@ -65,7 +65,7 @@
           <grid row="2" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Label"/>
+          <text value="-"/>
         </properties>
       </component>
       <grid id="ecf50" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
