--- a/src/main/java/net/gotzi/drawmachine/sim/editor/SimEditorView.form
+++ b/src/main/java/net/gotzi/drawmachine/sim/editor/SimEditorView.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="net.gotzi.drawmachine.sim.editor.SimEditorView">
-  <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="21" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="16" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="699"/>
+      <xy x="20" y="20" width="248" height="528"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -148,34 +148,6 @@
         </constraints>
         <properties/>
       </component>
-      <component id="62342" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="16" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Speed Stepper Motor 1"/>
-        </properties>
-      </component>
-      <component id="e53ba" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="16" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Speed Stepper Motor 2"/>
-        </properties>
-      </component>
-      <component id="2db50" class="javax.swing.JSpinner" binding="m2Speed">
-        <constraints>
-          <grid row="17" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-      </component>
-      <component id="3242c" class="javax.swing.JSpinner" binding="m1Speed">
-        <constraints>
-          <grid row="17" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-      </component>
       <component id="e0661" class="javax.swing.JSpinner" binding="mainPoleLength">
         <constraints>
           <grid row="10" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
@@ -188,20 +160,6 @@
         </constraints>
         <properties>
           <text value="Main Pole"/>
-        </properties>
-      </component>
-      <component id="61c36" class="javax.swing.JSpinner" binding="middleSpeed">
-        <constraints>
-          <grid row="15" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-      </component>
-      <component id="2330d" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="14" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Speed Middleboard"/>
         </properties>
       </component>
       <vspacer id="84867">
@@ -218,31 +176,22 @@
           </grid>
         </constraints>
       </vspacer>
-      <grid id="11c62" binding="simCompletedInfoArea" layout-manager="BorderLayout" hgap="0" vgap="0">
+      <vspacer id="d014f">
         <constraints>
-          <grid row="19" column="0" row-span="1" col-span="3" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <minimum-size width="-1" height="150"/>
-            <maximum-size width="-1" height="250"/>
+          <grid row="15" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+            <preferred-size width="-1" height="20"/>
           </grid>
+        </constraints>
+      </vspacer>
+      <grid id="be955" binding="editorPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="14" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
         <children/>
       </grid>
-      <vspacer id="a4ea">
-        <constraints>
-          <grid row="18" column="0" row-span="1" col-span="3" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
-            <minimum-size width="-1" height="20"/>
-          </grid>
-        </constraints>
-      </vspacer>
-      <vspacer id="d014f">
-        <constraints>
-          <grid row="20" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
-            <preferred-size width="-1" height="20"/>
-          </grid>
-        </constraints>
-      </vspacer>
     </children>
   </grid>
 </form>
