--- a/src/main/java/net/gotzi/drawmachine/sim/monitor/SimulationSettingView.form
+++ b/src/main/java/net/gotzi/drawmachine/sim/monitor/SimulationSettingView.form
@@ -48,7 +48,7 @@
           <grid row="2" column="5" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
-      <component id="d34be" class="javax.swing.JSpinner" binding="simStepSpinner">
+      <component id="d34be" class="javax.swing.JSpinner" binding="simAccuracySpinner">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
